--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -20,6 +20,10 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: vpro-db-data
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
           ports:
             - name: vprodb-port
               containerPort: 3306
@@ -29,6 +33,10 @@ spec:
                 secretKeyRef:
                   name: app-secret
                   key: db-pass
+      tolerations: # Section où placer la tolérance
+        - key: "node-role.kubernetes.io/control-plane"
+          effect: "NoSchedule"
+          operator: "Exists"
       nodeSelector:
         zone: us-east-1b
       volumes:
